--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-<h1>My Website</h1>
-<p>A website created by me.</p>
+<h1>Welcome</h1>
+<p>This website is a work in progress.</p>
 
 </body>
 </html>
