changed test to test.html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <div class="navbar">
   <a href="#">Home</a>
   <a href="#">Projects</a>
-  <a href="test" class="right">Test</a>
+  <a href="test.html" class="right">Test</a>
 </div>
 
 <div class="row">
-  
+
 
 </body>
 </html>
