--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Richard Jiang</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>Richard Jiang</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" type="text/css" href="web-style.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="web-style.css">
+  </head>
 
-<body>
+  <body>
+    <div class="header">
+      <h1>Welcome</h1>
+      <p>This website is a work in progress.</p>
+    </div>
 
-<div class="header">
-  <h1>Welcome</h1>
-  <p>This website is a work in progress.</p>
-</div>
+    <div class="navbar">
+      <a href="#">Home</a>
+      <a href="#">Projects</a>
+      <a href="test.html" class="right">Test</a>
+    </div>
 
-<div class="navbar">
-  <a href="#">Home</a>
-  <a href="#">Projects</a>
-  <a href="test.html" class="right">Test</a>
-</div>
+    <div class="row">
+      <div class="side">
+        
+      </div>
+      <div class="main">
 
-<div class="row">
-
-
-</body>
+      </div>
+    </div>
+  </body>
 </html>
