--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <div class="row">
       <div class="side">
-        
+        <p>Hello</p>
       </div>
       <div class="main">
-
+        <p>World</p>
       </div>
     </div>
   </body>
