--- a/index.html
+++ b/index.html
@@ -22,11 +22,36 @@
 
     <div class="row">
       <div class="side">
-        <p>Hello</p>
+        <h1>Hello World!</h1>
       </div>
       <div class="main">
-        <p>World</p>
+        <p>Stuff blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah
+           blah blah blah blah blah blah blah blah blah blah blah blah</p>
       </div>
+    </div>
+
+    <div class="footer">
+      <p>Footer</p>
     </div>
   </body>
 </html>
