--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
   <title>Testing Page</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="stylesheet" type="text/css" href="web-style.css">
+
+  <link rel="stylesheet" type="text/css" href="files/web-style.css">
 </head>
 
 <body>
