--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="web-style.css">
+    <link rel="stylesheet" type="text/css" href="files/web-style.css">
   </head>
 
   <body>
@@ -17,7 +17,8 @@
     <div class="navbar">
       <a href="#">Home</a>
       <a href="#">Projects</a>
-      <a href="test.html" class="right">Test</a>
+      <a href="files/Richard_Jiang_Resume.pdf" class="right">Download Resume</a>
+      <a href="contact" class="right">Test</a>
     </div>
 
     <div class="row">
