More Detailed Draft

--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
 
   <body>
     <div class="header">
-      <h1>Welcome</h1>
-      <p>This website is a work in progress.</p>
+      <h1>Hello World, I'm Richard!</h1>
+      <p>I am an aspiring full stack developer</p>
     </div>
 
     <div class="navbar">
-      <a href="#">Home</a>
+      <a>About</a>
       <a href="#">Projects</a>
-      <a href="files/Richard_Jiang_Resume.pdf" class="right">Download Resume</a>
-      <a href="contact" class="right">Test</a>
+      <a href="files/Richard_Jiang_Resume.pdf">Resume</a>
+      <a href="contact" class="right">Contact</a>
     </div>
 
     <div class="row">
       <div class="side">
         <h1>Hello World!</h1>
+        <img src="files/headshot.jpg" alt="Headshot Image" style="width:300px;height:300px">
       </div>
       <div class="main">
         <p>Stuff blah blah blah blah blah blah blah blah
            blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
+           blah blah blah <b>blah</b> blah blah blah blah blah
            blah blah blah blah blah blah blah blah blah
            blah blah blah blah blah blah blah blah blah
            blah blah blah blah blah blah blah blah blah
@@ -52,7 +53,6 @@
     </div>
 
     <div class="footer">
-      <p>Footer</p>
     </div>
   </body>
 </html>
