--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="files/web-style.css">
+    <script src="files/scripts.js"></script>
   </head>
 
   <body>
     <div class="header">
       <h1>Hello World, I'm Richard!</h1>
-      <p>I am an aspiring full stack developer</p>
+      <p class="descriptions" style="display:none;">I am an aspiring full stack developer</p>
+      <p class="descriptions" style="display:none;">I am a student at the University of Washington</p>
+      <p class="descriptions" style="display:block;">I am passionate about teaching and education</p>
+
     </div>
 
     <div class="navbar">
@@ -55,4 +59,6 @@
     <div class="footer">
     </div>
   </body>
+
+  <script>descriptionTimer();</script>
 </html>
