--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     </div>
 
     <div class="navbar">
-      <a>About</a>
-      <a href="#">Projects</a>
+      <a style="background-color: #1fe0ba;color: black;">About</a>
+      <a href="projects">Projects</a>
       <a href="files/Richard_Jiang_Resume.pdf">Resume</a>
       <a href="contact" class="right">Contact</a>
     </div>
 
-    <div class="row">
-      <div class="side">
+    <div class="columns">
+      <div class="side" style="flex: 10%;">
         <h1>Hello World!</h1>
-        <img src="files/headshot.jpg" alt="Headshot Image" style="width:300px;height:300px">
+        <img src="files/headshot.jpg" alt="Headshot Image" allign="middle" style="width:300px;height:300px;">
       </div>
-      <div class="main">
+      <div class="main" style="flex: 60%;">
         <p>Stuff blah blah blah blah blah blah blah blah
            blah blah blah blah blah blah blah blah blah
            blah blah blah <b>blah</b> blah blah blah blah blah
@@ -56,8 +56,7 @@
       </div>
     </div>
 
-    <div class="footer">
-    </div>
+    <div class="footer"></div>
   </body>
 
   <script>descriptionTimer();</script>
