--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,9 @@
 
   <div class="navbar">
     <a href="index">About</a>
-    <a class="right" style="background-color: #1fe0ba;color: black;">Projects</a>
+    <a style="background-color: #1fe0ba;color: black;">Projects</a>
     <a href="files/Richard_Jiang_Resume.pdf">Resume</a>
-    <a href="contact">Contact</a>
+    <a href="contact" class="right">Contact</a>
   </div>
 
   <div class="columns">
