--- a/index.html
+++ b/index.html
@@ -27,8 +27,24 @@
 
     <div class="columns">
       <div class="side" style="flex: 10%;">
-        <h1>Hello World!</h1>
-        <img src="files/headshot.jpg" alt="Headshot Image" allign="middle" style="width:300px;height:300px;">
+        <img src="files/headshot.jpg" alt="Headshot Image" allign="middle">
+        <h2>Purpose:</h2>
+        <p>Searching for summer and fall software internship oppurtunities in the industry. Looking to improve my skills in all aspects, to become a well rounded software developer.</p>
+        <h2>Skills:</h2>
+        <h3>-Languagues-</h3>
+        <ul>
+          <li>Java</li>
+          <li>Javascript</li>
+          <li>HTML5 & CSS3</li>
+          <li>R</li>
+        </ul>
+        <h3>-Other-</h3>
+        <ul>
+          <li>Git Experienced</li>
+          <li>Scrum Experienced</li>
+          <li>LaTeX Typesetting</li>
+          <li>Public Speaking</li>
+        </ul>
       </div>
       <div class="main" style="flex: 60%;">
         <p>Stuff blah blah blah blah blah blah blah blah
