Add favicon, sidebar, fixed style

--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Contact</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <title>Richard Jiang | Contact</title>
+    <link rel="icon" type="image/png" href="files/male-technologist.png" hreflang="en-us">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" type="text/css" href="files/web-style.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="files/web-style.css">
+  </head>
 
-<body>
-  <div class="banner">
-    <a href="index">RJ</a>
-  </div>
-
-  <div class="navbar">
-    <a href="index">About</a>
-    <a href="projects">Projects</a>
-    <a href="files/Richard_Jiang_Resume.pdf">Resume</a>
-    <a class="right" style="background-color: #1fe0ba;color: black;">Contact</a>
-  </div>
-
-  <div class="columns">
-    <div class="main" style="margin-left: 120px;margin-right: 120px;">
-      <p>Stuff blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah <b>blah</b> blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah
-         blah blah blah blah blah blah blah blah blah blah blah blah</p>
+  <body>
+    <div class="banner">
+      <a href="index">RJ</a>
     </div>
-  </div>
 
-  <div class="footer"></div>
-</body>
+    <div class="navbar">
+      <a href="index">About</a>
+      <a href="projects">Projects</a>
+      <a href="files/Richard_Jiang_Resume.pdf">Resume</a>
+      <a class="right" style="background-color: #1fe0ba;color: black;">Contact</a>
+    </div>
+
+    <div class="columns">
+      <div class="main" style="margin-left: 120px;margin-right: 120px;">
+        <p>
+          Stuff blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah <b>blah</b> blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah blah blah blah
+        </p>
+      </div>
+    </div>
+
+    <div class="footer"></div>
+  </body>
 </html>
