--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Richard Jiang</title>
+    <title>Richard Jiang | Aspiring Software Developer</title>
+    <link rel="icon" type="image/png" href="files/male-technologist.png" hreflang="en-us">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,46 +30,55 @@
       <div class="side" style="flex: 10%;">
         <img src="files/headshot.jpg" alt="Headshot Image" allign="middle">
         <h2>Purpose:</h2>
-        <p>Searching for summer and fall software internship oppurtunities in the industry. Looking to improve my skills in all aspects, to become a well rounded software developer.</p>
+        <p>
+          Searching for summer and fall software internship oppurtunities in the
+          industry. Looking to improve my skills in all aspects, to become a well
+          rounded software developer.
+        </p>
         <h2>Skills:</h2>
-        <h3>-Languagues-</h3>
+        <h3>-Languages-</h3>
         <ul>
           <li>Java</li>
           <li>Javascript</li>
           <li>HTML5 & CSS3</li>
           <li>R</li>
         </ul>
+        <h3>-Tools-</h3>
+        <ul>
+          <li>Git & Version Control</li>
+          <li>LaTeX Typesetting</li>
+        </ul>
         <h3>-Other-</h3>
         <ul>
-          <li>Git Experienced</li>
           <li>Scrum Experienced</li>
-          <li>LaTeX Typesetting</li>
           <li>Public Speaking</li>
         </ul>
       </div>
       <div class="main" style="flex: 60%;">
-        <p>Stuff blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah <b>blah</b> blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah
-           blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        <p>
+          Stuff blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah <b>blah</b> blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah
+          blah blah blah blah blah blah blah blah blah blah blah blah
+        </p>
       </div>
     </div>
 
