--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="columns">
       <div class="side" style="flex: 10%;">
-        <img src="files/headshot.jpg" alt="Headshot Image" allign="middle">
+        <img src="files/headshot.jpg" alt="Headshot Image" allign="middle" style="width:300px;height:300px;border-radius:150px;">
         <h2>Purpose:</h2>
         <p>
           Searching for summer and fall software internship oppurtunities in the
